# nico

./: .gitignore  CHARACTER_DIALOG_ENHANCEMENTS.md  COMPLETE_CHARACTER_ENHANCEMENT.md  DATA_SECURITY_STATUS.md  LICENSE  LLM_TEAM_IMPLEMENTATION.md  PRIVACY.md  README.md  TEMPLATE_SYSTEM_SUMMARY.md  TEMPLATE_USAGE_GUIDE.md  alembic.ini  analyze_character_data.py  backup_database.py  debug_ollama.py  delete_confirmations_verified.py  demo_all_features.py  demo_character_dialog.py  demo_character_generation.py  demo_enhanced_character_dialog.py  demo_model_manager.py  demo_style_transfer.py  demo_templates.py  embedding_server.py  example_generation.py  explore_db.py  image_z_image_turbo.json  import_wife_csvs.py  nico.sh  pyproject.toml  requirements-dev.txt  requirements.txt  seed_templates.py  setup_lan.sh  test_chapter_creation_flow.py  test_chapter_dialog.py  test_model_manager.py  test_story_display.py  test_templates.py  test_tool_calling.py  test_topaz_enhance.py  (+2 more)
alembic/: env.py
alembic/versions/: 64af92b464e5_initial_schema_with_project_story_.py
comfyui_presets/: README.md  api_topaz_image_enhance.json  sdxl_revision_text_prompts.json
comfyui_workflows_generated/: style_transfer_20260125_220411.json  style_transfer_20260125_220445.json
docs/: LAN_DEPLOYMENT.md  LLM_TEAM.md  TEMPLATES.md
examples/: ai_story_generation.py
migrations/: env.py
migrations/versions/: 44256c655e48_initial_schema.py  55ce2aa9315c_add_media_library_models.py  5971d0d04376_add_symbolic_layer_models.py  64fca3a3a896_add_character_image_prompt_and_embedding.py  aea9f4624826_add_embedding_vectors_to_entities.py  b490d1542a01_add_character_image_path.py  e1e95a525580_add_templating_and_world_building_tables.py
nico/: __init__.py  __main__.py  ai_tools.py  config.py  preferences.py  templates.py  theme.py
nico/ai/: __init__.py  discovery.py  manager.py  model_manager.py  providers.py
nico/application/: __init__.py  ai_service.py  context.py  csv_importer.py  generators.py  repositories.py  services.py
nico/application/use_cases/: __init__.py  chapter.py  project.py  scene.py  story.py
nico/domain/: __init__.py  repositories.py
nico/domain/models/: __init__.py  base.py  chapter.py  character.py  character_motif_relationship.py  event.py  location.py  media.py  media_attachment.py  project.py  relationship.py  scene.py  scene_document.py  scene_template.py  story.py  story_template.py  symbolic_motif.py  symbolic_occurrence.py  symbolic_theme.py  world_building_table.py
nico/domain/services/: __init__.py  ranking.py
nico/infrastructure/: __init__.py  comfyui_service.py  embedding_service.py  style_transfer_workflow.py  topaz_enhance_workflow.py
nico/infrastructure/ai/: __init__.py
nico/infrastructure/database/: __init__.py  connection.py  repositories.py  settings.py
nico/infrastructure/exporters/: __init__.py
nico/infrastructure/importers/: __init__.py
nico/infrastructure/persistence/: __init__.py  database.py  models.py  repositories.py
nico/infrastructure/search/: __init__.py
nico/presentation/: __init__.py  main_window.py
scripts/: README.md  generate_sample_data.py
tests/: __init__.py  test_config.py
(+45 files in other folders)
